# fastapi-projects

./: .gitignore
Learning-Management-System/: main.py  pyproject.toml  seeder.py
Learning-Management-System/app/: auth.py  database.py
Learning-Management-System/app/models/: activity_log.py  announcement.py  attendance.py  role.py  subject.py  user.py
Learning-Management-System/app/routers/: activity_log.py  announcement.py  attendance.py  authentication.py  student.py  subjects.py  teacher.py
Learning-Management-System/app/schemas/: activity_log.py  announcement.py  attendance.py  subject.py  user.py
Learning-Management-System/app/utils/: activity_logger.py
Learning-Management-System/frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
Learning-Management-System/frontend/src/: App.jsx
Learning-Management-System/frontend/src/components/admin/: AttendanceReport.jsx  Dashboard.jsx  Notifications.jsx  Settings.jsx  Students.jsx  Subjects.jsx  Teachers.jsx
Learning-Management-System/frontend/src/components/auth/: Login.jsx
Learning-Management-System/frontend/src/components/common/: LoadingSpinner.jsx  Navbar.jsx  ProtectedRoute.jsx  Sidebar.jsx
Learning-Management-System/frontend/src/components/student/: Dashboard.jsx  (+2 more)
Learning-Management-System/frontend/src/context/: AuthContext.jsx
Learning-Management-System/frontend/src/services/: activityLogService.js  announcementService.js  api.js  attendanceService.js  authService.js  subjectService.js  userService.js
Learning-Management-System/frontend/src/styles/: index.css
(+47 files in other folders)
