[project]
name = "lms-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bcrypt==4.0.1",
    "fastapi[standard]>=0.138.1",
    "passlib>=1.7.4",
    "pyjwt>=2.13.0",
    "pymysql>=1.2.0",
    "sqlalchemy>=2.0.51",
]
